# android.ndk.oculus-quest-example

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cc/guidoschmidt/quest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/cc/guidoschmidt/quest/: MainActivity.java
app/src/test/java/cc/guidoschmidt/quest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
